airsonic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airsonic
  labels:
    app: airsonic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airsonic
  template:
    metadata:
      labels:
        app: airsonic
    spec:
      containers:
      - name: airsonic
        image: airsonic/airsonic
        ports:
        - containerPort: 4040
        volumeMounts:
        - name: airsonic-data
          mountPath: /var/airsonic
        - name: airsonic-music
          mountPath: /var/music
      volumes:
      - name: airsonic-data
        persistentVolumeClaim:
          claimName: airsonic-data-pvc
      - name: airsonic-music
        persistentVolumeClaim:
          claimName: airsonic-music-pvc
