airsonic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airsonic-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - airsonic.yukino.li
      secretName: airsonic-yukino-li-tls
  rules:
    - host: airsonic.yukino.li
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airsonic
                port:
                  number: 80
